# chicagomaps_scraper

./: CityChicagoMapsAccessible.htm  README.md  pyproject.toml  scraper.py  stylesheet.css
old_outputs/: maps_df.csv  maps_df.xlsx
output/: city_of_chicago_maps.xlsx
restructured_data/: city_of_chicago_maps.xlsx
