[tool.poetry]
name = "chicagomaps-scraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "chicagomaps_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.2"
requests = "^2.28.2"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
