[tool.poetry]
name = "chicagomaps-scraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "chicagomaps_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.2"
requests = "^2.28.2"
pandas = "^1.5.3"
cssselect = "^1.2.0"
openpyxl = "^3.0.10"
regex = "^2022.10.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
